--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "dev": "nodemon ./src/index.ts",
+    "start": "npx tsc && node ./dist/index.js"
   },
   "keywords": [
     "Projeto",
@@ -11,5 +12,11 @@
   ],
   "author": "Cezar Augusto Mezzalira",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.9.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  }
 }
